--- a/vue-admin-template/src/styles/variables.scss
+++ b/vue-admin-template/src/styles/variables.scss
@@ -3,10 +3,10 @@ $menuText:#bfcbd9;
 $menuActiveText:#409EFF;
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
+$menuBg:#1A1E29;
 $menuHover:#263445;
 
-$subMenuBg:#1f2d3d;
+$subMenuBg:#10121A;
 $subMenuHover:#001528;
 
 $sideBarWidth: 210px;
